# scalapack-demo

./: CMakeLists.txt
src/: PMatrix.cpp  PMatrix.h  blacs.h  example2.h  example3.h  main.cpp  utilities.h
src/mpi/: mpiController.cpp  mpiController.h  mpiHelper.h
